# calculator

./: .gitignore  README.rst  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: constants.py  schemas.py
backend/app/api/v1/routers/: calculator.py
backend/app/core/: config.py
backend/app/tests/: test_main.py
backend/app/tests/api/: test_calculator.py
docker/nginx/: default.conf
frontend/: index.html
frontend/css/: main.css
frontend/script/: main.js
