[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Ivan Dvornikov <nezde6nij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
pytest = "^6.2.2"
requests = "^2.25.1"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
